[gd_scene load_steps=25 format=2]

[ext_resource path="res://font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Singleton.gd" type="Script" id=2]
[ext_resource path="res://Spatial0.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=13]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 75.0
content_margin_top = 30.0
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="CapsuleShape" id=6]

[sub_resource type="OpenSimplexNoise" id=7]
octaves = 9
period = 0.1
persistence = 1.0
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=8]
bump_strength = 6.3
noise = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = SubResource( 8 )

[sub_resource type="CapsuleMesh" id=10]
material = SubResource( 9 )

[sub_resource type="SphereMesh" id=11]

[sub_resource type="PrismMesh" id=12]

[sub_resource type="BoxShape" id=14]

[sub_resource type="CubeMesh" id=15]

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0, 0.415686, 1, 1 )

[sub_resource type="SpatialMaterial" id=17]
albedo_color = Color( 0.0862745, 0.862745, 0.247059, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.0156863, 0.309804, 0.819608, 1 )

[sub_resource type="DynamicFont" id=19]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0156863, 0.309804, 0.819608, 1 )

[sub_resource type="ViewportTexture" id=21]
viewport_path = NodePath("Viewport")

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="Label2" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.5
margin_top = -166.413
margin_right = 216.5
margin_bottom = -65.4128
custom_fonts/font = SubResource( 13 )
text = "World Changed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.0
margin_top = -252.0
margin_right = 263.0
margin_bottom = 253.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Right Click = Change Worlds

Left Click = Change Physics Layer
(for the blue and green boxes)

Forward  =  W                Back  =  S
Left  =  A                        Right  =  D
Jump  =  Space
Fly  =  Alt (hold and move)            
Switch Camera  =  Tab 
Pause Menu  =  Escape"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -172.999
margin_top = -64.0
margin_right = -98.9989
margin_bottom = -27.0
custom_fonts/font = SubResource( 3 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 39.0
margin_top = -64.0
margin_right = 175.0
margin_bottom = -27.0
custom_fonts/font = SubResource( 4 )
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.6646
margin_top = -64.0757
margin_right = 29.3354
margin_bottom = -27.0757
custom_fonts/font = SubResource( 5 )
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KinematicBody" type="KinematicBody" parent="."]
collision_mask = 7

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.5, 0 )
visible = false
mesh = SubResource( 10 )
material/0 = null

[node name="Spatial" type="Spatial" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.47417, -0.0662751 )

[node name="MeshInstance2" type="MeshInstance" parent="KinematicBody/Spatial"]
transform = Transform( 0.7, 0, 0, 0, 0.699561, -0.0247837, 0, 0.0247837, 0.699561, 0, 0, 0 )
mesh = SubResource( 11 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="KinematicBody/Spatial/MeshInstance2"]
transform = Transform( 0.142857, 0, 0, 0, -0.285715, 7.7486e-07, 0, -1.04308e-07, -2.14286, 1.08486, -1.20885, -1.94854 )
mesh = SubResource( 12 )
material/0 = null

[node name="Camera" type="Camera" parent="KinematicBody/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.4 )
far = 2096.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.595875, 0.803078, 0, -0.803078, -0.595875, 0, -5.56712, 0 )
shadow_enabled = true
directional_shadow_mode = 0

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.23444, -1.05908, 10.5747 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 2, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 2, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
mesh = SubResource( 15 )
material/0 = SubResource( 16 )

[node name="StaticBody2" type="StaticBody" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.98002 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody2"]
transform = Transform( 2, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody2"]
transform = Transform( 2, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
mesh = SubResource( 15 )
material/0 = SubResource( 17 )

[node name="StaticBody3" type="StaticBody" parent="StaticBody/StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.248184, 5.29963 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/StaticBody2/StaticBody3"]
transform = Transform( 1.9, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/StaticBody2/StaticBody3"]
transform = Transform( 1.9, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
mesh = SubResource( 15 )
material/0 = null

[node name="Spatial" parent="." instance=ExtResource( 5 )]

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1200, 450 )
transparent_bg = true

[node name="Label" type="Label" parent="Viewport"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.581
margin_top = -221.261
margin_right = 211.419
margin_bottom = -51.2613
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Collision Disabled"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Viewport/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -19.5
margin_top = -1.0
margin_right = 20.5
margin_bottom = 424.0
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.45, 4.2, 11.75 )
visible = false
flip_v = true
billboard = 2
texture = SubResource( 21 )

[connection signal="pressed" from="Label/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Label/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Label/Button3" to="." method="_on_Button3_pressed"]
